# Personal-finance-tracker

./: .gitignore  Account.h  CMakeLists.txt  Expense.cpp  Expense.h  FinanceManager.cpp  FinanceManager.h  Income.cpp  Income.h  Makefile  README.md  Transaction.cpp  Transaction.h  main.cpp
tests/Integration/: test_finance_manager.cpp
tests/Unit/: test_account.cpp  test_transaction.cpp
